# libkdtree

./: CMakeLists.txt  README.md
python/kdtree/: __init__.py  core.py
src/: kdtree.cpp  kdtree.h
